Mise en place des mails et optimisation du code